# waybill

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.ebpf-check  Dockerfile.ebpf-test  GOVERNANCE.md  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  lima.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-tag-release.yml  ci.yml  perf.yml  public-corpus.yml  realistic-projects.yml  release.yml
.project/: darnit.yaml  project.yaml
.specify/memory/: constitution.md
docs/: DEPENDENCIES.md  TESTING.md  design-notes.md  ecosystems.md  index.md  releases.md
docs/architecture/: attestations.md  enrichment.md  generation.md  licenses.md  overview.md  purls-and-cpes.md  resolution.md  resolvers.md  scanning.md  signing.md
docs/audits/: 2026-07-05-kubernetes-argocd.md  2026-07-06-tauri-airflow.md
docs/migration/: mikebom-to-waybill.md
docs/reference/: component-tiers.md  conformance-harness-guide.md  corpus-record-v2.schema.json  cross-ecosystem-edges.md  cross-tier-binding.md  identifiers.md  monorepos.md  reading-a-mikebom-sbom.md  registry-tls-options.md  sbom-format-mapping.md  sbom-types.md  source-identifiers.md  split-modes.md
docs/research/: go-binary-scope.md
docs/user-guide/: cli-reference.md  configuration.md  installation.md  quickstart.md
mikebom-cli/: Cargo.toml  build.rs
mikebom-cli/src/: lib.rs  main.rs
mikebom-cli/tests/: alpm_file_claim_dedupe.rs  binary_id_enrich.rs  binary_source_binding_regression.rs  binding_emission.rs  brew_alternate_prefixes.rs  brew_apple_silicon_baseline.rs  brew_edge_cases.rs  cargo_optional_feature_resolve.rs  cargo_workspace_root_lifecycle_m200.rs  cdx_ref_closure_invariant.rs  cdx_regression.rs  cmake_find_package_kamailio_shape_integration.rs  cmake_walker_depth_cross_depth_version.rs  cmake_walker_depth_deep_emission.rs  cmake_walker_depth_symlink_cycle.rs  cmake_walker_depth_third_party_opt_in.rs  cocoapods_edge_cases.rs  cocoapods_ios_app_baseline.rs  cocoapods_tier_fallbacks.rs  compiler_pipeline_stdin.rs  component_count_parity.rs  composer_edge_cases.rs  composer_tier_fallbacks.rs  cpe_binary_id.rs  dart_design_tier.rs  dart_edge_cases.rs  design_source_reconcile.rs  design_tier_advisory.rs  divergent_purl_hashes_differ.rs  divergent_purl_summary.rs  dual_format_perf.rs  elixir_tier_fallbacks.rs  exclude_path_integration.rs  file_tier_orphan_emit.rs  file_tier_vcs_skip.rs  fingerprints_v2_schema.rs  format_dispatch.rs  go_build_inclusion.rs  graph_completeness_operator_root.rs  haskell_edge_cases.rs  (+84 more)
mikebom-cli/tests/fixtures/optional_dep/cargo/: Cargo.toml
mikebom-common/src/: events.rs  lib.rs  resolution.rs
mikebom-common/tests/: versionless_purl_fuzz.rs
mikebom-ebpf/src/: main.rs  maps.rs
scripts/: ebpf-integration-test.sh  install-spdx3-validate.sh  pre-pr.sh  regen-goldens.sh  verify-docs-currency.sh
scripts/corpus/: refresh-pins.sh  regen-goldens.sh
tests/: fixtures.rev
waybill-cli/: Cargo.toml  build.rs  waybill.cdx.json
waybill-cli/tests/fixtures/cmake-find-package/kamailio-shape/: CMakeLists.txt
waybill-cli/tests/fixtures/cmake-find-package/kamailio-shape/cmake/modules/: FindLibev.cmake
waybill-cli/tests/fixtures/compiler_pipeline/two_binaries_diverge/: Cargo.toml
waybill-cli/tests/fixtures/compiler_pipeline/two_binaries_diverge/binaries/safe-only/: Cargo.toml
waybill-cli/tests/fixtures/compiler_pipeline/two_binaries_diverge/binaries/safe-only/src/: main.rs
waybill-cli/tests/fixtures/compiler_pipeline/two_binaries_diverge/binaries/vuln-included/src/: main.rs
waybill-cli/tests/fixtures/compiler_pipeline/two_binaries_diverge/libsafe/: Cargo.toml
waybill-cli/tests/fixtures/compiler_pipeline/two_binaries_diverge/libsafe/src/: lib.rs
waybill-cli/tests/fixtures/compiler_pipeline/two_binaries_diverge/libvuln/: Cargo.toml
waybill-cli/tests/fixtures/golden_inputs/dedup_collision/: CMakeLists.txt  README.md  conanfile.txt
waybill-cli/tests/fixtures/split_nested_workspace/: Cargo.toml
waybill-cli/tests/fixtures/split_nested_workspace/cargo-a/: Cargo.toml
waybill-cli/tests/fixtures/split_nested_workspace/cargo-a/src/: lib.rs
waybill-cli/tests/fixtures/split_nested_workspace/cargo-b-with-npm/: Cargo.toml
waybill-cli/tests/fixtures/split_nested_workspace/cargo-b-with-npm/apps/npm-svc-1/: package-lock.json  package.json
waybill-cli/tests/fixtures/split_nested_workspace/cargo-b-with-npm/apps/npm-svc-2/: package-lock.json  package.json
waybill-cli/tests/fixtures/split_nested_workspace/cargo-b-with-npm/src/: lib.rs
waybill-common/: Cargo.toml
waybill-ebpf/: Cargo.toml
waybill-ebpf/src/: helpers.rs  maps.rs
waybill-ebpf/src/programs/: compiler_exec.rs  file_ops.rs  tcp_connect.rs  tls_openssl.rs
(+1982 files in other folders)
