[package]
name = "waybill-ebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "waybill-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
waybill-common = { path = "../waybill-common", default-features = false }

[profile.release]
panic = "abort"
lto = true
opt-level = 2
