[package]
name = "m179-cargo-optional-fixture"
version = "0.1.0"
edition = "2021"

# Milestone 179 US3 fixture — exercises `optional = true` inside
# `[dependencies]`. The `serde` dep is a plain runtime dep;
# `once_cell` is declared optional and gated behind the `caching`
# feature. mikebom classifies `once_cell` as
# LifecycleScope::Optional; SPDX 2.3 emits `once_cell
# OPTIONAL_DEPENDENCY_OF m179-cargo-optional-fixture`; CDX emits
# `once_cell` with `scope: "excluded"`; both formats carry the
# `mikebom:optional-derivation = "cargo-optional-true"` annotation.

[dependencies]
serde = "1"
once_cell = { version = "1", optional = true }

[features]
caching = ["dep:once_cell"]
