# Milestone 205 (#593): `[workspace]` empty table makes this a
# standalone project so `cargo metadata --offline --locked` (invoked
# by m205's classifier at `cargo.rs::resolve_activated_deps_via_cargo_metadata`)
# doesn't try to absorb it into mikebom's own Cargo workspace.
# Without this, cargo errors: "current package believes it's in a
# workspace when it's not." Only needed for fixtures shipped as
# directories inside another Cargo project.
[workspace]

[package]
name = "m179-cargo-optional-fixture"
version = "0.1.0"
edition = "2021"

# Milestone 179 US3 fixture — exercises `optional = true` inside
# `[dependencies]`. The `serde` dep is a plain runtime dep;
# `once_cell` is declared optional and gated behind the `caching`
# feature. mikebom classifies `once_cell` as
# LifecycleScope::Optional; SPDX 2.3 emits `once_cell
# OPTIONAL_DEPENDENCY_OF m179-cargo-optional-fixture`; CDX emits
# `once_cell` with `scope: "excluded"`; both formats carry the
# `mikebom:optional-derivation = "cargo-optional-true"` annotation.

[dependencies]
serde = "1"
once_cell = { version = "1", optional = true }

[features]
caching = ["dep:once_cell"]
